--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.8.0",
         "@babel/plugin-proposal-class-properties": "^7.1.0",
+        "@babel/preset-react": "^7.8.0",
         "axios": "^0.19",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
