--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.26",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/react-fontawesome": "^0.1.8",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "react-bs-datatable": "^2.0.4",
+        "react-router-dom": "^5.1.2"
     }
 }
